# emergent-models

./: .gitignore  CLEANUP_SUMMARY.md  ENCODER_CONSOLIDATION.md  NEW_ARCHITECTURE.md  README.md  RELEASE_NOTES.md  debug_ca_evolution.py  pyproject.toml
comparison_results/: comparison_results.json  summary_report.txt
emergent_models/: .gitignore  __init__.py  genome.py  main.py
emergent_models/core/: __init__.py  base.py  genome.py  module.py  space.py  space_model.py  state.py
emergent_models/data/: __init__.py  dataloader.py  dataset.py  mathematical.py
emergent_models/encoders/: __init__.py  base.py  binary.py  em43.py  new_binary.py  position.py
emergent_models/losses/: __init__.py  base.py  distance.py  pattern.py
emergent_models/optimizers/: __init__.py  genetic.py
emergent_models/rules/: __init__.py  base.py  elementary.py  em43.py  programme.py  ruleset.py  sanitization.py
emergent_models/simulation/: __init__.py  simulator.py
emergent_models/simulators/: __init__.py  base.py  numba_simulator.py  sequential.py
emergent_models/training/: __init__.py  checkpointing.py  custom_fitness.py  monitor.py  new_fitness.py  new_trainer.py  optimizer.py  trainer.py
emergent_models/utils/: __init__.py  visualization.py
emergent_models/visualization/: __init__.py  base.py  fitness.py  progression.py  tape.py  themes.py  utils.py
examples/: README.md  doubling.ipynb  early_stopping_demo.py  em43_doubling.py  increment.py  increment_binary.py  increment_unified.py  rule_analyzer.py  simple_ca_inspector.py  training_debugger.py  visualization_demo.py
examples/sandbox/: COMPARISON_SUMMARY.md  TQDM_CLI_FIX.md  compare_old_vs_new.py  debug_ga_evolution.py  debug_simulation.py  em43_doubling_cli.py  em43_doubling_new.py  em43_doubling_old.py  graph_compute.ipynb  test_optimized_trainer.py  visualize_comparison.py
examples/sandbox/comparison_results/: comparison_results.json
